[metadata]
name = fzy-cffi
version = 1.0.0
description = Python bindings for fzy's matching algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/brownbishop/fzy-cffi
author = brownbishop
author_email = catalin1second@gmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = fzy-cffi
install_requires =
    cffi>=1
python_requires = >=3.7
setup_requires =
    cffi>=1
